--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,84 +1,95 @@
 ---
 ---
 
-@string{aps = {American Physical Society,}}
-
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
+@article{li2022reinforcement,
+  title={Reinforcement Learning in Possibly Nonstationary Environments},
+  author={Li, Mengbing and Shi, Chengchun and Wu, Zhenke and Fryzlewicz, Piotr},
+  journal={arXiv preprint arXiv:2203.01707},
+  year={2022}
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
+@article{schaefer2018practice,
+  title={Practice and Correlates of Cancer Associated Thrombosis: The Impact of Socioeconomic Status},
+  author={Schaefer, Jordan K and Wu, Zhenke and Li, Mengbing and Griggs, Jennifer J and Sood, Suman L},
+  journal={Blood},
+  volume={132},
+  pages={2225},
+  year={2018},
+  publisher={Elsevier}
 }
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein, A. and Podolsky, B. and Rosen, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  selected={true}
+@article{schaefer2021anticoagulant,
+  title={Anticoagulant medication adherence for cancer-associated thrombosis: a comparison of LMWH to DOACs},
+  author={Schaefer, Jordan K and Li, Mengbing and Wu, Zhenke and Basu, Tanima and Dorsch, Michael P and Barnes, Geoffrey D and Carrier, Marc and Griggs, Jennifer J and Sood, Suman L},
+  journal={Journal of Thrombosis and Haemostasis},
+  volume={19},
+  number={1},
+  pages={212--220},
+  year={2021},
+  publisher={Elsevier}
 }
 
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
+@article{wu2021tree,
+  title={Tree-informed Bayesian multi-source domain adaptation: cross-population probabilistic cause-of-death assignment using verbal autopsy},
+  author={Wu, Zhenke and Li, Zehang Richard and Chen, Irena and Li, Mengbing},
+  journal={arXiv preprint arXiv:2112.10978},
+  year={2021}
+}
+
+@article{edupuganti2022factors,
+  title={Factors Associated with Inferior Vena Cava Filter Placement and Retrieval for Patients with Cancer-Associated Thrombosis},
+  author={Edupuganti, Subhash and Li, Mengbing and Wu, Zhenke and Basu, Tanima and Barnes, Geoffrey D and Carrier, Marc and Sood, Suman L and Griggs, Jennifer J and Schaefer, Jordan K},
+  journal={The American Journal of Medicine},
+  volume={135},
+  number={4},
+  pages={478--487},
+  year={2022},
+  publisher={Elsevier}
+}
+
+@article{li2023integrating,
+  title={Integrating sample similarities into latent class analysis: a tree-structured shrinkage approach},
+  author={Li, Mengbing and Park, Daniel E and Aziz, Maliha and Liu, Cindy M and Price, Lance B and Wu, Zhenke},
+  journal={Biometrics},
+  volume={79},
+  number={1},
+  pages={264--279},
+  year={2023}
+}
+
+@article{schaefer2021clinical,
+  title={Clinical and sociodemographic factors associated with anticoagulant use for cancer associated venous thromboembolism},
+  author={Schaefer, Jordan K and Li, Mengbing and Wu, Zhenke and Basu, Tanima and Barnes, Geoffrey D and Carrier, Marc and Griggs, Jennifer J and Sood, Suman L},
+  journal={Journal of Thrombosis and Thrombolysis},
+  volume={52},
+  pages={214--223},
+  year={2021},
+  publisher={Springer US}
+}
+
+@article{bitar2017sicca,
+  title={Sicca, Anxiety and Depression (SAD) Study},
+  author={Bitar, Maya and Olson, Danny and Li, Mengbing and Koch, Gary and Davis, Richard},
+  journal={Investigative Ophthalmology \& Visual Science},
+  volume={58},
   number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
+  pages={3749--3749},
+  year={2017},
+  publisher={The Association for Research in Vision and Ophthalmology}
 }
 
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
-  volume={17},
-  pages={549--560},
-  year={1905}
+@article{hu2022doubly,
+  title={Doubly Inhomogeneous Reinforcement Learning},
+  author={Hu, Liyuan and Li, Mengbing and Shi, Chengchun and Wu, Zhenke and Fryzlewicz, Piotr},
+  journal={arXiv preprint arXiv:2211.03983},
+  year={2022}
 }
 
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
-}
-
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif}
+@article{liu2023using,
+  title={Using source-associated mobile genetic elements to identify zoonotic extraintestinal E. coli infections},
+  author={Liu, Cindy M and Aziz, Maliha and Park, Daniel E and Wu, Zhenke and Stegger, Marc and Li, Mengbing and Wang, Yashan and Schmidlin, Kara and Johnson, Timothy J and Koch, Benjamin J and others},
+  journal={One Health},
+  pages={100518},
+  year={2023},
+  publisher={Elsevier}
 }
